Revert "IGNITE-15393 Add errorprone plugin (#304)" (#320)
This reverts commit 0d12630f